@@ -8,6 +8,7 @@ Not to mention all bugfixes and rewrites.
 Coccinella-0.96.? (2007????)
 
  o added support for XEP-0172: User Nickname
+ o added autoaway which detects any system inactivity like mouse and keyboard
 
 Coccinella-0.96.0 (20070525)
 
